--- a/ProyectoAplicadaI/ProyectoAplicadaI.csproj
+++ b/ProyectoAplicadaI/ProyectoAplicadaI.csproj
@@ -31,15 +31,22 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.3500.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net40\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net40\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="FlashControlV71, Version=1.0.3187.32366, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -81,6 +88,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Cobro\CobrosdeEmpeño.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Cobro\CobrosdeEmpeño.Designer.cs">
+      <DependentUpon>CobrosdeEmpeño.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Consultas\ConsultadeClientes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -147,6 +160,18 @@
     <Compile Include="UI\Registros\RegistrodeClientes.Designer.cs">
       <DependentUpon>RegistrodeClientes.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\Reportes\RepoteClientes.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>RepoteClientes.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="UI\VentanasReportes\ClienteReporte.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\VentanasReportes\ClienteReporte.Designer.cs">
+      <DependentUpon>ClienteReporte.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -163,6 +188,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UI\Cobro\CobrosdeEmpeño.resx">
+      <DependentUpon>CobrosdeEmpeño.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\Consultas\ConsultadeClientes.resx">
       <DependentUpon>ConsultadeClientes.cs</DependentUpon>
     </EmbeddedResource>
@@ -196,6 +224,13 @@
     <EmbeddedResource Include="UI\Registros\RegistrodeUsuarios.resx">
       <DependentUpon>RegistrodeUsuarios.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\Reportes\RepoteClientes.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>RepoteClientes.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\VentanasReportes\ClienteReporte.resx">
+      <DependentUpon>ClienteReporte.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="App.config" />
     <None Include="packages.config" />
     <None Include="Properties\DataSources\ProyectoAplicadaI.ENTIDADES.Articulos.datasource" />
@@ -215,7 +250,9 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="DAL\Scripts\Scripts.sql" />
     <None Include="Resources\icons8_Print_324.png" />
@@ -257,5 +294,6 @@
     <None Include="Resources\icons8_Login32_32.png" />
     <None Include="Resources\icons8_Login_16.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
