--- a/ProyectoAplicadaI/ProyectoAplicadaI.csproj
+++ b/ProyectoAplicadaI/ProyectoAplicadaI.csproj
@@ -72,7 +72,7 @@
     <Compile Include="ENTIDADES\ActivodeNegocio.cs" />
     <Compile Include="ENTIDADES\Clientes.cs" />
     <Compile Include="ENTIDADES\EntradadeActivos.cs" />
-    <Compile Include="ENTIDADES\Cobro.cs" />
+    <Compile Include="ENTIDADES\Cobros.cs" />
     <Compile Include="ENTIDADES\Recibos.cs" />
     <Compile Include="ENTIDADES\ReciboDetalles.cs" />
     <Compile Include="ENTIDADES\Usuarios.cs" />
@@ -90,11 +90,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UI\Cobro\CobrosdeEmpeño.cs">
+    <Compile Include="UI\RegistrodePago\RegistrodePago.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UI\Cobro\CobrosdeEmpeño.Designer.cs">
-      <DependentUpon>CobrosdeEmpeño.cs</DependentUpon>
+    <Compile Include="UI\RegistrodePago\RegistrodePago.Designer.cs">
+      <DependentUpon>RegistrodePago.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\Consultas\ConsultadeClientes.cs">
       <SubType>Form</SubType>
@@ -107,6 +107,12 @@
     </Compile>
     <Compile Include="UI\Consultas\ConsultadeArticulos.Designer.cs">
       <DependentUpon>ConsultadeArticulos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Consultas\ConsultadePagos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Consultas\ConsultadePagos.Designer.cs">
+      <DependentUpon>ConsultadePagos.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\Consultas\ConsultadeEntradadeActivos.cs">
       <SubType>Form</SubType>
@@ -168,6 +174,12 @@
     <Compile Include="UI\Registros\RegistrodeClientes.Designer.cs">
       <DependentUpon>RegistrodeClientes.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\Reportes\Cobrosreport.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Cobrosreport.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="UI\Reportes\ListadeRecibos.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -222,6 +234,12 @@
     <Compile Include="UI\VentanasReportes\ClienteReporte.Designer.cs">
       <DependentUpon>ClienteReporte.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\VentanasReportes\ReportedeCobros.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\VentanasReportes\ReportedeCobros.Designer.cs">
+      <DependentUpon>ReportedeCobros.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\VentanasReportes\UsuarioReporte.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -268,14 +286,17 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="UI\Cobro\CobrosdeEmpeño.resx">
-      <DependentUpon>CobrosdeEmpeño.cs</DependentUpon>
+    <EmbeddedResource Include="UI\RegistrodePago\RegistrodePago.resx">
+      <DependentUpon>RegistrodePago.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Consultas\ConsultadeClientes.resx">
       <DependentUpon>ConsultadeClientes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Consultas\ConsultadeArticulos.resx">
       <DependentUpon>ConsultadeArticulos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Consultas\ConsultadePagos.resx">
+      <DependentUpon>ConsultadePagos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Consultas\ConsultadeEntradadeActivos.resx">
       <DependentUpon>ConsultadeEntradadeActivos.cs</DependentUpon>
@@ -306,6 +327,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Registros\RegistrodeUsuarios.resx">
       <DependentUpon>RegistrodeUsuarios.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Reportes\Cobrosreport.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>Cobrosreport.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Reportes\ListadeRecibos.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
@@ -341,6 +366,9 @@
     <EmbeddedResource Include="UI\VentanasReportes\ClienteReporte.resx">
       <DependentUpon>ClienteReporte.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\VentanasReportes\ReportedeCobros.resx">
+      <DependentUpon>ReportedeCobros.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\VentanasReportes\UsuarioReporte.resx">
       <DependentUpon>UsuarioReporte.cs</DependentUpon>
     </EmbeddedResource>
@@ -361,6 +389,7 @@
     <None Include="Properties\DataSources\ProyectoAplicadaI.ENTIDADES.Articulos.datasource" />
     <None Include="Properties\DataSources\ProyectoAplicadaI.ENTIDADES.CapitaldeNegocios.datasource" />
     <None Include="Properties\DataSources\ProyectoAplicadaI.ENTIDADES.Clientes.datasource" />
+    <None Include="Properties\DataSources\ProyectoAplicadaI.ENTIDADES.Cobro.datasource" />
     <None Include="Properties\DataSources\ProyectoAplicadaI.ENTIDADES.EntradadeActivos.datasource" />
     <None Include="Properties\DataSources\ProyectoAplicadaI.ENTIDADES.ReciboDetalles.datasource" />
     <None Include="Properties\DataSources\ProyectoAplicadaI.ENTIDADES.Recibos.datasource" />
@@ -380,6 +409,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="DAL\Scripts\Scripts.sql" />
+    <None Include="Resources\icons8_Password_1_32.png" />
+    <None Include="Resources\icons8_Customer_322.png" />
+    <None Include="Resources\icons8_Customer_321.png" />
+    <None Include="Resources\icons8_Cash_in_Hand_321.png" />
+    <None Include="Resources\icons8_Delete_Document_323.png" />
+    <None Include="Resources\icons8_Cash_in_Hand_32.png" />
+    <None Include="Resources\icons8_Broom_323.png" />
+    <None Include="Resources\icons8_View_328.png" />
     <None Include="Resources\icons8_Cancel_321.png" />
     <None Include="Resources\icons8_Exit_321.png" />
     <None Include="Resources\icons8_Payment_History_32.png" />
